--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pactwork",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Contract-first API simulation framework - Mocks you can trust",
   "type": "module",
   "main": "./dist/index.js",
@@ -23,7 +23,7 @@
     "build": "tsup",
     "test": "vitest",
     "test:run": "vitest run",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build"
   },
@@ -63,12 +63,14 @@
     "ora": "^8.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/diff": "^5.2.3",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.17.12",
-    "eslint": "^8.57.1",
+    "eslint": "^9.0.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.0.0",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
