--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,4 +1,5 @@
 # yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
+# Pactwork - CodeRabbit automated review configuration
 language: "en-US"
 early_access: false
 
