fix: address CodeRabbit review feedback
Major fixes:
- Escape GitHub Actions annotation values in reporter
- Escape regex metacharacters in validator path matching
- Escape regex metacharacters in contract verifier
- Validate command input in GitHub Action
- Parse actual drift count in action output

Minor fixes:
- Add typed results array in verify command
- Use DEFAULTS constants for consumer/provider
- Add 3xx status filter handling in scenarios
- Store scenario status as string (not number)
- Handle first 2xx as primary response type
- Add empty/digit guards to pascalCase
- Guard requestBody content access in typegen
- Skip $ref parameters in parser
- Add schema removal detection in breaking changes
- Add info section to breaking changes output
- Add cycle detection in schema comparison
- Log errors in generator verbose mode
- Return parsed spec from generateHandlers

Documentation fixes:
- Use # heading in PR template
- Add permissions block to CI publish job
- Add text language to code blocks in docs
- Add limit constraints to petstore examples

Tests:
- Add typegen composition tests
- Add scenario key exact assertion
- Update constants tests for new DEFAULTS

--- a/action/action.yml
+++ b/action/action.yml
@@ -63,28 +63,45 @@ runs:
       id: run
       shell: bash
       working-directory: ${{ inputs.working-directory }}
+      env:
+        INPUT_COMMAND: ${{ inputs.command }}
+        INPUT_SPEC: ${{ inputs.spec }}
+        INPUT_HANDLERS: ${{ inputs.handlers }}
+        INPUT_FORMAT: ${{ inputs.format }}
+        INPUT_FAIL_ON_WARNING: ${{ inputs.fail-on-warning }}
+        INPUT_FIX: ${{ inputs.fix }}
       run: |
+        # Validate command against allowed list
+        case "${INPUT_COMMAND}" in
+          validate|generate|can-i-deploy|diff)
+            ;;
+          *)
+            echo "::error::Invalid command: ${INPUT_COMMAND}. Allowed: validate, generate, can-i-deploy, diff"
+            exit 1
+            ;;
+        esac
+
         # Build command
-        CMD="pactwork ${{ inputs.command }}"
+        CMD="pactwork ${INPUT_COMMAND}"
 
         # Add options
-        if [ -n "${{ inputs.spec }}" ]; then
-          CMD="$CMD --spec ${{ inputs.spec }}"
+        if [ -n "${INPUT_SPEC}" ]; then
+          CMD="$CMD --spec ${INPUT_SPEC}"
         fi
 
-        if [ -n "${{ inputs.handlers }}" ]; then
-          CMD="$CMD --handlers ${{ inputs.handlers }}"
+        if [ -n "${INPUT_HANDLERS}" ]; then
+          CMD="$CMD --handlers ${INPUT_HANDLERS}"
         fi
 
-        if [ "${{ inputs.command }}" = "validate" ] || [ "${{ inputs.command }}" = "diff" ]; then
-          CMD="$CMD --format ${{ inputs.format }}"
+        if [ "${INPUT_COMMAND}" = "validate" ] || [ "${INPUT_COMMAND}" = "diff" ]; then
+          CMD="$CMD --format ${INPUT_FORMAT}"
         fi
 
-        if [ "${{ inputs.fail-on-warning }}" = "true" ]; then
+        if [ "${INPUT_FAIL_ON_WARNING}" = "true" ]; then
           CMD="$CMD --fail-on-warning"
         fi
 
-        if [ "${{ inputs.fix }}" = "true" ] && [ "${{ inputs.command }}" = "validate" ]; then
+        if [ "${INPUT_FIX}" = "true" ] && [ "${INPUT_COMMAND}" = "validate" ]; then
           CMD="$CMD --fix"
         fi
 
@@ -93,11 +110,13 @@ runs:
 
         echo "Running: $CMD"
 
-        # Run and capture exit code
+        # Run and capture output + exit code
         set +e
-        $CMD
+        OUTPUT=$($CMD 2>&1)
         EXIT_CODE=$?
         set -e
+
+        echo "${OUTPUT}"
 
         # Set outputs
         if [ $EXIT_CODE -eq 0 ]; then
@@ -105,7 +124,9 @@ runs:
           echo "drift_count=0" >> $GITHUB_OUTPUT
         else
           echo "valid=false" >> $GITHUB_OUTPUT
-          echo "drift_count=unknown" >> $GITHUB_OUTPUT
+          # Parse actual drift count from output
+          DRIFT_COUNT=$(echo "${OUTPUT}" | grep -oP '\d+(?= error\(s\))' || echo "unknown")
+          echo "drift_count=${DRIFT_COUNT}" >> $GITHUB_OUTPUT
         fi
 
         # Exit with original code
