--- a/examples/petstore-v2.yaml
+++ b/examples/petstore-v2.yaml
@@ -13,6 +13,8 @@ paths:
           required: true  # Breaking: new required parameter
           schema:
             type: integer
+            minimum: 1
+            maximum: 100
       responses:
         '200':
           description: A list of pets
@@ -20,6 +22,7 @@ paths:
             application/json:
               schema:
                 type: array
+                maxItems: 100
                 items:
                   $ref: '#/components/schemas/Pet'
     post:
@@ -48,6 +51,8 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 1
+            maxLength: 64
       responses:
         '200':
           description: A pet
@@ -68,12 +73,19 @@ components:
       properties:
         id:
           type: string
+          minLength: 1
+          maxLength: 64
         name:
           type: string
+          minLength: 1
+          maxLength: 128
         species:
           type: string
+          minLength: 1
+          maxLength: 64
         tag:
           type: string
+          maxLength: 64
     CreatePetRequest:
       type: object
       required:
@@ -81,5 +93,8 @@ components:
       properties:
         name:
           type: string
+          minLength: 1
+          maxLength: 128
         tag:
           type: string
+          maxLength: 64
