--- a/examples/petstore.yaml
+++ b/examples/petstore.yaml
@@ -7,6 +7,14 @@ paths:
     get:
       summary: List all pets
       operationId: listPets
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
       responses:
         '200':
           description: A list of pets
@@ -14,6 +22,7 @@ paths:
             application/json:
               schema:
                 type: array
+                maxItems: 100
                 items:
                   $ref: '#/components/schemas/Pet'
     post:
@@ -42,6 +51,8 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 1
+            maxLength: 64
       responses:
         '200':
           description: A pet
@@ -61,10 +72,15 @@ components:
       properties:
         id:
           type: string
+          minLength: 1
+          maxLength: 64
         name:
           type: string
+          minLength: 1
+          maxLength: 128
         tag:
           type: string
+          maxLength: 64
     CreatePetRequest:
       type: object
       required:
@@ -72,5 +88,8 @@ components:
       properties:
         name:
           type: string
+          minLength: 1
+          maxLength: 128
         tag:
           type: string
+          maxLength: 64
