feat: add coverage command for Storybook story analysis
Add `pactwork coverage` command to analyze which OpenAPI scenarios
have corresponding Storybook stories:

- New core module: src/core/coverage/ (types, scanner, calculator)
- CLI command with 4 output formats (console, json, markdown, github)
- CI gate with --min-coverage threshold enforcement
- Regex-based scanner for pactwork.scenario/scenarios in story files
- CoverageSection component in Storybook addon panel
- Color-coded progress bar (green ≥80%, yellow 50-79%, red <50%)
- 29 unit tests for coverage module

Usage:
  pactwork coverage --spec ./openapi.yaml --stories ./src
  pactwork coverage --min-coverage 80 --ci
  pactwork coverage --format markdown --output COVERAGE.md

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ Thumbs.db
 *.log
 npm-debug.log*
 
-# Test coverage
-coverage/
+# Test coverage (root-level only)
+/coverage/
 
 # Environment
 .env
