feat(addon): release v1.0.0 with toolbar controls and observability panel
BREAKING: Addon architecture redesigned - control via toolbar, panel for observability

- Add toolbar controls for scenario, latency, and network state (globalTypes)
- Add observability panel showing request logs, current state, handlers
- Add 32 unit tests for Panel component (63 total addon tests)
- Fix DTS build with tsconfig path mappings for peer dependencies
- Remove orphaned Panel.styles.ts and CoverageSection.tsx
- Update README with professional documentation and Storybook guide
- Bump pactwork to v1.2.0, @pactwork/storybook-addon to v1.0.0

--- a/packages/storybook-addon/tsconfig.json
+++ b/packages/storybook-addon/tsconfig.json
@@ -20,7 +20,12 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "baseUrl": ".",
+    "paths": {
+      "pactwork": ["../../dist/index.d.ts"],
+      "pactwork/runtime": ["../../dist/runtime/index.d.ts"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
