--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -61,8 +61,9 @@
   },
   "peerDependencies": {
     "pactwork": "^1.2.0",
-    "storybook": "^8.4.0 || ^10.0.0",
-    "msw": "^2.0.0"
+    "storybook": "^8.4.0 || ^9.0.0 || ^10.0.0",
+    "msw": "^2.0.0",
+    "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@storybook/components": "^8.4.0",
