fix: address CodeRabbit review issues (round 3)
- Add typeToTS helper for OpenAPI 3.1 array type support
- Format ESLint rule as inline code in docs
- Put "types" before "import" in storybook-addon exports
- Add synthetic failed interaction on contract load failure
- Handle all media types in breaking change detection
- Pass isRequestContext for proper severity in type/enum changes

--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -7,20 +7,20 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./manager": {
-      "import": "./dist/manager.js",
-      "types": "./dist/manager.d.ts"
+      "types": "./dist/manager.d.ts",
+      "import": "./dist/manager.js"
     },
     "./preview": {
-      "import": "./dist/preview.js",
-      "types": "./dist/preview.d.ts"
+      "types": "./dist/preview.d.ts",
+      "import": "./dist/preview.js"
     },
     "./preset": {
-      "import": "./dist/preset.js",
-      "types": "./dist/preset.d.ts"
+      "types": "./dist/preset.d.ts",
+      "import": "./dist/preset.js"
     }
   },
   "files": [
