--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,17 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Publish to npm
+      - name: Publish pactwork to npm
         run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Build storybook-addon
+        run: npm run build
+        working-directory: packages/storybook-addon
+
+      - name: Publish @pactwork/storybook-addon to npm
+        run: npm publish --access public
+        working-directory: packages/storybook-addon
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
